register user, login, jwt & authentication-week 8
