# middleware/validate.js
@@ -22,17 +22,57 @@ const validateIncomingPostData = (req, res, next) => {
   });
 };
 
-// FUNCTION TO VALIDATE INCOMING USER DATA
-const validateIncomingUserData = (req, res, next) => {
+// FUNCTION TO VALIDATE INCOMING USER DATA - REGISTER USER
+const validateIncomingUserDataForRegisteringUser = (req, res, next) => {
   const validationRule = {
     firstName: 'required|string',
     lastName: 'required|string',
-    userEmail: 'required|email',
+    email: 'required|email',
+    password: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+// FUNCTION TO VALIDATE INCOMING USER DATA - LOGIN USER
+const validateIncomingUserDataForLoginUser = (req, res, next) => {
+  const validationRule = {
+    email: 'required|email',
+    password: 'required|string'
+  };
+  validator(req.body, validationRule, {}, (err, status) => {
+    if (!status) {
+      res.status(412).send({
+        success: false,
+        message: 'Validation failed',
+        data: err
+      });
+    } else {
+      next();
+    }
+  });
+};
+
+// FUNCTION TO VALIDATE INCOMING USER DATA - UPDATING USER
+const validateIncomingUserDataForUpdatingUser = (req, res, next) => {
+  const validationRule = {
+    firstName: 'required|string',
+    lastName: 'required|string',
+    email: 'required|email',
     password: 'required|string',
-    birthday: 'string',
-    gender: 'string',
-    favoriteQuote: 'string',
-    country: 'string'
+    birthday: 'required|string',
+    gender: 'required|string',
+    favoriteQuote: 'required|string',
+    country: 'required|string'
   };
   validator(req.body, validationRule, {}, (err, status) => {
     if (!status) {
@@ -49,5 +89,7 @@ const validateIncomingUserData = (req, res, next) => {
 
 module.exports = {
   validateIncomingPostData,
-  validateIncomingUserData
+  validateIncomingUserDataForLoginUser,
+  validateIncomingUserDataForRegisteringUser,
+  validateIncomingUserDataForUpdatingUser
 };
